// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > should not receive onChange event when not a number changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary error"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        min="0"
        name="my-textfield"
        type="number"
        value=""
      />
    </div>
    <div
      class="errorContainer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
          fill="currentColor"
        />
      </svg>
       
      Must be a valid number
    </div>
  </div>
</div>
`;

exports[`TextField > should not receive onChange event when number above max changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary error"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        min="0"
        name="my-textfield"
        type="number"
        value="101"
      />
    </div>
    <div
      class="errorContainer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
          fill="currentColor"
        />
      </svg>
       
      Cannot be greater than 100
    </div>
  </div>
</div>
`;

exports[`TextField > should not receive onChange event when number bellow min changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary error"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        min="0"
        name="my-textfield"
        type="number"
        value="-1"
      />
    </div>
    <div
      class="errorContainer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
          fill="currentColor"
        />
      </svg>
       
      Cannot be less than 0
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="number"
        value="1337"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number equal max changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        name="my-textfield"
        type="number"
        value="100"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number equal min changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        min="0"
        name="my-textfield"
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when text changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="text"
        value="some value"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should render a TextField with type number 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should render a TextField with type text 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="text"
        value="some value"
      />
    </div>
  </div>
</div>
`;
